updates tokens in brand-context

--- a/context/brand-context/default/scss/00-tokens/_breakpoints.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_breakpoints.variables.scss
@@ -1,9 +1,9 @@
 
 // Do not edit directly
-// Generated on Wed, 28 Sep 2022 14:39:48 GMT
+// Generated on Fri, 21 Oct 2022 11:11:37 GMT
 
-$tokens--breakpoints-xs: 320px; // mobile
-$tokens--breakpoints-sm: 580px; // small tablet
-$tokens--breakpoints-md: 768px; // tablet
-$tokens--breakpoints-lg: 1024px; // small desktop
-$tokens--breakpoints-xl: 1220px; // desktop
+$tokens--breakpoints-xs: 320px;
+$tokens--breakpoints-sm: 580px;
+$tokens--breakpoints-md: 768px;
+$tokens--breakpoints-lg: 1024px;
+$tokens--breakpoints-xl: 1220px;
