--- a/context/brand-context/default/scss/00-tokens/_button.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_button.variables.scss
@@ -1,8 +1,8 @@
 
 // Do not edit directly
-// Generated on Wed, 28 Sep 2022 14:39:48 GMT
+// Generated on Fri, 21 Oct 2022 11:11:43 GMT
 
-$tokens--button-background-primary-resting: #01324b;
-$tokens--button-background-primary-hover: #ffffff;
-$tokens--button-background-secondary-resting: #ffffff;
-$tokens--button-background-secondary-hover: #01324b;
+$t-button-background-primary-resting: #01324b !default;
+$t-button-background-primary-hover: #ffffff !default;
+$t-button-background-secondary-resting: #ffffff !default;
+$t-button-background-secondary-hover: #01324b !default;
