--- a/context/brand-context/default/scss/00-tokens/_color.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_color.variables.scss
@@ -1,33 +1,33 @@
 
 // Do not edit directly
-// Generated on Wed, 28 Sep 2022 14:39:48 GMT
+// Generated on Fri, 21 Oct 2022 11:11:43 GMT
 
-$tokens--color-white: #ffffff;
-$tokens--color-black: #000000;
-$tokens--color-grayscale-200: #f8f8f8;
-$tokens--color-grayscale-300: #f3f3f3;
-$tokens--color-grayscale-400: #dadada;
-$tokens--color-grayscale-500: #999999;
-$tokens--color-grayscale-600: #666666;
-$tokens--color-grayscale-700: #555555;
-$tokens--color-grayscale-800: #222222;
-$tokens--color-blue-100: #ebf1f5;
-$tokens--color-blue-200: #cedbe0;
-$tokens--color-blue-300: #0088cc;
-$tokens--color-blue-400: #025e8d;
-$tokens--color-blue-700: #003f8d;
-$tokens--color-blue-900: #01324b;
-$tokens--color-primary-universal-dark-blue: #01324b;
-$tokens--color-primary-medium-blue: #025e8d;
-$tokens--color-primary-bright-blue: #0088cc;
-$tokens--color-primary-grey-blue-light-1: #ebf1f5;
-$tokens--color-primary-grey-blue-light-2: #cedbe0;
-$tokens--color-primary-black: #000000;
-$tokens--color-primary-white: #ffffff;
-$tokens--color-information-red: #c40606;
-$tokens--color-information-orange: #f58220;
-$tokens--color-information-blue: #000000;
-$tokens--color-information-green: #00a69d;
-$tokens--color-interaction-hover: #025e8d;
-$tokens--color-interaction-visited: #a345c9;
-$tokens--color-interaction-focus: #ffcc00;
+$t-color-white: #ffffff;
+$t-color-black: #000000;
+$t-color-greyscale-200: #f8f8f8;
+$t-color-greyscale-300: #f3f3f3;
+$t-color-greyscale-400: #dadada;
+$t-color-greyscale-500: #999999;
+$t-color-greyscale-600: #666666;
+$t-color-greyscale-700: #555555;
+$t-color-greyscale-800: #222222;
+$t-color-blue-100: #ebf1f5;
+$t-color-blue-200: #cedbe0;
+$t-color-blue-300: #0088cc;
+$t-color-blue-400: #025e8d;
+$t-color-blue-700: #003f8d;
+$t-color-blue-900: #01324b;
+$t-color-primary-universal-dark-blue: #01324b !default;
+$t-color-primary-medium-blue: #025e8d !default;
+$t-color-primary-bright-blue: #0088cc !default;
+$t-color-primary-grey-blue-light-1: #ebf1f5 !default;
+$t-color-primary-grey-blue-light-2: #cedbe0 !default;
+$t-color-primary-black: #000000 !default;
+$t-color-primary-white: #ffffff !default;
+$t-color-information-red: #c40606 !default;
+$t-color-information-orange: #f58220 !default;
+$t-color-information-blue: #000000 !default;
+$t-color-information-green: #00a69d !default;
+$t-color-interaction-hover: #025e8d !default;
+$t-color-interaction-visited: #a345c9 !default;
+$t-color-interaction-focus: #ffcc00 !default;
