--- a/context/brand-context/default/scss/00-tokens/_font-weight.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_font-weight.variables.scss
@@ -1,8 +1,8 @@
 
 // Do not edit directly
-// Generated on Wed, 28 Sep 2022 14:39:48 GMT
+// Generated on Fri, 21 Oct 2022 11:11:37 GMT
 
-$tokens--font-weight-light: 300; // normal
-$tokens--font-weight-normal: 400; // The normal, or ‘regular’, font weight.
-$tokens--font-weight-regular: 400; // The normal, or ‘regular’, font weight.
-$tokens--font-weight-bold: 700; // The bold font weight.
+$tokens--font-weight-light: 300;
+$tokens--font-weight-normal: 400;
+$tokens--font-weight-regular: 400;
+$tokens--font-weight-bold: 700;
