--- a/context/brand-context/default/scss/00-tokens/_icon.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_icon.variables.scss
@@ -1,7 +1,7 @@
 
 // Do not edit directly
-// Generated on Wed, 28 Sep 2022 14:39:48 GMT
+// Generated on Fri, 21 Oct 2022 11:11:43 GMT
 
-$tokens--icon-checkbox-checked-stroke: #ffffff;
-$tokens--icon-checkbox-checked-fill: #01324b;
-$tokens--icon-select-stroke: #000000;
+$t-icon-checkbox-checked-stroke: #ffffff !default;
+$t-icon-checkbox-checked-fill: #01324b !default;
+$t-icon-select-stroke: #000000 !default;
