--- a/context/brand-context/default/scss/00-tokens/_index.scss
+++ b/context/brand-context/default/scss/00-tokens/_index.scss
@@ -4,9 +4,11 @@
 @import '_button.variables.scss';
 @import '_color.variables.scss';
 @import '_font-weight.variables.scss';
+@import '_gap.variables.scss';
 @import '_icon.variables.scss';
 @import '_link.variables.scss';
-@import '_sizing.variables.scss';
+@import '_margin.variables.scss';
+@import '_padding.variables.scss';
 @import '_spacing.variables.scss';
 @import '_state.variables.scss';
 @import '_text.variables.scss';
