--- a/context/brand-context/default/scss/00-tokens/_text.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_text.variables.scss
@@ -1,7 +1,7 @@
 
 // Do not edit directly
-// Generated on Wed, 28 Sep 2022 14:39:48 GMT
+// Generated on Fri, 21 Oct 2022 11:11:43 GMT
 
-$tokens--text-primary: #000000;
-$tokens--text-secondary: #666666;
-$tokens--text-reversed: #ffffff;
+$t-text-primary: #000000 !default;
+$t-text-secondary: #666666 !default;
+$t-text-reversed: #ffffff !default;
