--- a/context/brand-context/default/scss/00-tokens/_ui.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_ui.variables.scss
@@ -1,7 +1,7 @@
 
 // Do not edit directly
-// Generated on Wed, 28 Sep 2022 14:39:48 GMT
+// Generated on Fri, 21 Oct 2022 11:11:43 GMT
 
-$tokens--ui-font-size: 1rem;
-$tokens--ui-focus-outline-color: #0088cc;
-$tokens--ui-content-width: 70ch;
+$t-ui-font-size: 1rem;
+$t-ui-focus-outline-color: #0088cc;
+$t-ui-content-width: 70ch;
