--- a/context/brand-context/default/scss/00-tokens/_background.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_background.variables.scss
@@ -1,7 +1,7 @@
 
 // Do not edit directly
-// Generated on Wed, 28 Sep 2022 14:39:48 GMT
+// Generated on Fri, 21 Oct 2022 11:11:43 GMT
 
-$tokens--background-page: #f8f8f8;
-$tokens--background-container: #ffffff;
-$tokens--background-container-inverted: #222222;
+$t-background-page: #f8f8f8 !default;
+$t-background-container: #ffffff !default;
+$t-background-container-inverted: #222222 !default;
