--- a/context/brand-context/default/scss/00-tokens/_border.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_border.variables.scss
@@ -1,14 +1,14 @@
 
 // Do not edit directly
-// Generated on Wed, 28 Sep 2022 14:39:48 GMT
+// Generated on Fri, 21 Oct 2022 11:11:43 GMT
 
-$tokens--border-color-primary: #222222;
-$tokens--border-color-input: #999999;
-$tokens--border-color-button: #01324b;
-$tokens--border-color-indent: #dadada;
-$tokens--border-radius-50: 2px;
-$tokens--border-radius-100: 4px;
-$tokens--border-width-25: 1px;
-$tokens--border-width-50: 2px;
-$tokens--border-width-100: 4px;
-$tokens--border-width-200: 8px;
+$t-border-color-primary: #222222 !default;
+$t-border-color-input: #999999 !default;
+$t-border-color-button: #01324b !default;
+$t-border-color-indent: #dadada !default;
+$t-border-radius-50: 2px !default;
+$t-border-radius-100: 4px !default;
+$t-border-width-25: 1px !default;
+$t-border-width-50: 2px !default;
+$t-border-width-100: 4px !default;
+$t-border-width-200: 8px !default;
