--- a/context/brand-context/nature/scss/00-tokens/_typography.variables.scss
+++ b/context/brand-context/nature/scss/00-tokens/_typography.variables.scss
@@ -1,15 +1,15 @@
 
 // Do not edit directly
-// Generated on Wed, 28 Sep 2022 14:39:48 GMT
+// Generated on Fri, 21 Oct 2022 11:11:43 GMT
 
-$tokens--typography-heading-font-family: serif;
-$tokens--typography-heading-letter-spacing: 0.2rem;
-$tokens--typography-heading-line-height: 1.2;
-$tokens--typography-heading-font-weight: 700;
-$tokens--typography-heading-level-1-default-font-size: 2rem;
-$tokens--typography-heading-level-1-fluid-font-size: clamp(1.5rem, 4vw, 2rem);
-$tokens--typography-heading-level-2-default-font-size: 1.5rem;
-$tokens--typography-heading-level-2-fluid-font-size: clamp(1.25rem, 4vw, 1.5rem);
-$tokens--typography-heading-level-3-default-font-size: 1.25rem;
-$tokens--typography-heading-level-4-default-font-size: 1.25rem;
-$tokens--typography-heading-level-5-default-font-size: 1.125rem;
+$t-typography-heading-font-family: serif !default;
+$t-typography-heading-letter-spacing: 0.2rem !default;
+$t-typography-heading-line-height: 1.2 !default;
+$t-typography-heading-font-weight: 700 !default;
+$t-typography-heading-level-1-default-font-size: 2rem !default;
+$t-typography-heading-level-1-fluid-font-size: clamp(1.5rem, 4vw, 2rem) !default;
+$t-typography-heading-level-2-default-font-size: 1.5rem !default;
+$t-typography-heading-level-2-fluid-font-size: clamp(1.25rem, 4vw, 1.5rem) !default;
+$t-typography-heading-level-3-default-font-size: 1.25rem !default;
+$t-typography-heading-level-4-default-font-size: 1.25rem !default;
+$t-typography-heading-level-5-default-font-size: 1.125rem !default;
