--- a/context/brand-context/springernature/scss/00-tokens/_breakpoints.variables.scss
+++ b/context/brand-context/springernature/scss/00-tokens/_breakpoints.variables.scss
@@ -1,8 +1,8 @@
 
 // Do not edit directly
-// Generated on Wed, 28 Sep 2022 14:39:48 GMT
+// Generated on Fri, 21 Oct 2022 11:11:37 GMT
 
-$tokens--breakpoints-tablet-width: 480px; // tablet-width
-$tokens--breakpoints-tablet-wide-width: 768px; // tablet-wide-width
-$tokens--breakpoints-wide-layout: 876px; // wide-layout
-$tokens--breakpoints-desktop-width: 1024px; // desktop-width
+$tokens--breakpoints-tablet-width: 480px;
+$tokens--breakpoints-tablet-wide-width: 768px;
+$tokens--breakpoints-wide-layout: 876px;
+$tokens--breakpoints-desktop-width: 1024px;
