Updates syntax for negative margin on component container to be clearer

--- a/toolkits/global/packages/global-ratings-survey/scss/50-components/_ratings-survey.scss
+++ b/toolkits/global/packages/global-ratings-survey/scss/50-components/_ratings-survey.scss
@@ -1,6 +1,6 @@
 .c-ratings-survey {
 	padding: $global-ratings-survey-container-padding;
-	margin: 0 (0 - $global-ratings-survey-container-padding);
+	margin: 0 calc(0px - #{$global-ratings-survey-container-padding});
 	background-color: $global-ratings-survey-container-background-color;
 	overflow: hidden;
 	font-family: $global-ratings-survey-font-family;
