--- a/toolkits/global/packages/global-ratings-survey/view/ratingsSurvey.hbs
+++ b/toolkits/global/packages/global-ratings-survey/view/ratingsSurvey.hbs
@@ -15,7 +15,7 @@
 				</div>
 				{{#if questionUrl}}
 					{{#if questionText}}
-						<a href="{{questionUrl}}?id={{id}}" target="_blank">{{questionText}} (opens in a new tab)</a>
+						<a href="{{questionUrl}}" data-ratings-survey="survey-link" target="_blank" rel="noopener">{{questionText}} (opens in a new tab)</a>
 					{{/if}}
 				{{/if}}
 			</div>
