--- a/context/brand-context/default/scss/00-tokens/_typography.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_typography.variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Fri, 21 Oct 2022 11:11:43 GMT
+// Generated on Mon, 14 Nov 2022 15:43:11 GMT
 
 $t-typography-heading-font-family: serif !default;
 $t-typography-heading-letter-spacing: 0.2rem !default;
@@ -17,3 +17,10 @@ $t-typography-level-4-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI'
 $t-typography-level-4-default-font-size: 1.25rem !default;
 $t-typography-level-4-fluid-font-size: clamp(1.125rem, 4vw, 1.25rem) !default;
 $t-typography-level-4-font-weight: 700 !default;
+$t-typography-level-5-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif !default;
+$t-typography-level-5-font-size: 1.125rem !default;
+$t-typography-level-5-font-weight: 700 !default;
+$t-typography-block-spacing-small: .5rem;
+$t-typography-block-spacing-medium: 1rem;
+$t-typography-block-spacing-large: 2rem;
+$t-typography-block-spacing-x-large: 3rem;
