specifies the line height because of nature

--- a/toolkits/global/packages/global-footer/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-footer/scss/10-settings/default.scss
@@ -8,6 +8,7 @@ $footer--vertical-rhythm: spacing(32);
 $footer--spacing-small: 8px;
 $footer--spacing-medium: 16px;
 $footer--spacing-large: 24px;
+$footer--line-height: 1.15;
 
 $footer--margin-bottom: spacing(0);
 $footer--border: 2px solid #fff;
