--- a/toolkits/global/packages/global-footer/scss/50-components/footer.scss
+++ b/toolkits/global/packages/global-footer/scss/50-components/footer.scss
@@ -4,6 +4,7 @@
 	padding-top: $footer--padding-top;
 	padding-bottom: $footer--padding-bottom;
 	color: $footer--text-color;
+	line-height: $footer--line-height;
 }
 
 .c-footer__container {
