--- a/context/brand-context/default/scss/00-tokens/_font-weight.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_font-weight.variables.scss
@@ -1,8 +1,8 @@
 
 // Do not edit directly
-// Generated on Fri, 21 Oct 2022 11:11:37 GMT
+// Generated on Mon, 05 Dec 2022 17:04:03 GMT
 
-$tokens--font-weight-light: 300;
-$tokens--font-weight-normal: 400;
-$tokens--font-weight-regular: 400;
-$tokens--font-weight-bold: 700;
+$t-font-weight-light: 300;
+$t-font-weight-normal: 400;
+$t-font-weight-regular: 400;
+$t-font-weight-bold: 700;
