--- a/context/brand-context/default/scss/00-tokens/_spacing.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_spacing.variables.scss
@@ -1,20 +1,20 @@
 
 // Do not edit directly
-// Generated on Fri, 21 Oct 2022 11:11:37 GMT
+// Generated on Mon, 05 Dec 2022 17:04:03 GMT
 
-$tokens--spacing-relative-0: 0;
-$tokens--spacing-relative-100: .25rem;
-$tokens--spacing-relative-200: .5rem;
-$tokens--spacing-relative-400: 1rem;
-$tokens--spacing-relative-600: 1.5rem;
-$tokens--spacing-relative-800: 2rem;
-$tokens--spacing-relative-1200: 3rem;
-$tokens--spacing-relative-1600: 4rem;
-$tokens--spacing-absolute-0: 0;
-$tokens--spacing-absolute-100: 4px;
-$tokens--spacing-absolute-200: 8px;
-$tokens--spacing-absolute-400: 16px;
-$tokens--spacing-absolute-600: 24px;
-$tokens--spacing-absolute-800: 32px;
-$tokens--spacing-absolute-1200: 48px;
-$tokens--spacing-absolute-1600: 64px;
+$t-spacing-relative-0: 0;
+$t-spacing-relative-100: .25rem;
+$t-spacing-relative-200: .5rem;
+$t-spacing-relative-400: 1rem;
+$t-spacing-relative-600: 1.5rem;
+$t-spacing-relative-800: 2rem;
+$t-spacing-relative-1200: 3rem;
+$t-spacing-relative-1600: 4rem;
+$t-spacing-absolute-0: 0;
+$t-spacing-absolute-100: 4px;
+$t-spacing-absolute-200: 8px;
+$t-spacing-absolute-400: 16px;
+$t-spacing-absolute-600: 24px;
+$t-spacing-absolute-800: 32px;
+$t-spacing-absolute-1200: 48px;
+$t-spacing-absolute-1600: 64px;
