Add width/heights to settings

--- a/toolkits/springernature/packages/springernature-header/scss/10-settings/layout.scss
+++ b/toolkits/springernature/packages/springernature-header/scss/10-settings/layout.scss
@@ -1,2 +1,6 @@
 $header--header-height: 40px;
 $header--content-width: 1184px;
+$header__site-logo-height-small: 35px;
+$header__site-logo-width-small: 123px;
+$header__site-logo-height: 45px;
+$header__site-logo-width: 158px;
