--- a/toolkits/springernature/packages/springernature-header/scss/50-components/core.scss
+++ b/toolkits/springernature/packages/springernature-header/scss/50-components/core.scss
@@ -22,8 +22,8 @@
 }
 
 .c-header__site-logo {
-	width: 123px;
-	height: 35px;
+	width: $header__site-logo-width-small;
+	height: $header__site-logo-height-small;
 	margin: 0 30px 10px 0;
 }
 
