reorganisation and layout tweaks

--- a/toolkits/global/packages/global-product/demo/index.hbs
+++ b/toolkits/global/packages/global-product/demo/index.hbs
@@ -1,1 +1,6 @@
-{{> globalProductList productsList }}
+<div style="margin: 0 auto; max-width: 1248px;">
+	<h2>Latest journals</h2>
+	{{> globalProductList productsList }}
+	<div style="margin-block-start: 5em">
+	{{> globalProductList productsListGrid }}
+</div>
