--- a/toolkits/global/packages/global-product/demo/main.scss
+++ b/toolkits/global/packages/global-product/demo/main.scss
@@ -5,5 +5,9 @@
 @import '../scss/00-tokens/default.tokens.scss';
 @import '../scss/50-components/global-product';
 
-// Button utilities
+// Utilities
 @import '../node_modules/@springernature/brand-context/default/scss/60-utilities/buttons.scss';
+@import '../node_modules/@springernature/brand-context/default/scss/60-utilities/display.scss';
+@import '../node_modules/@springernature/brand-context/default/scss/60-utilities/flex.scss';
+@import '../node_modules/@springernature/brand-context/default/scss/60-utilities/icons.scss';
+@import '../node_modules/@springernature/brand-context/default/scss/60-utilities/spacing.scss';
