--- a/toolkits/global/packages/global-product/view/globalProduct.hbs
+++ b/toolkits/global/packages/global-product/view/globalProduct.hbs
@@ -1,4 +1,4 @@
-<div class="c-product">
+<div class="c-product{{#if type}} c-product--{{type}}{{/if}}">
 	<div class="c-product__image">
 		<img src="{{image.src}}" alt="{{#if image.alt}}{{image.alt}}{{else}}cover: {{title}}{{/if}}">
 	</div>
@@ -10,7 +10,12 @@
 				{{#if href}}</a>{{/if}}
 			</h3>
 			{{#if openAccess}}
-				<small class="c-product__subtitle">Open access</small>
+				<small class="c-product__subtitle u-display-flex u-align-items-center">
+					<svg class="u-icon u-mr-4" width="22" height="22" aria-hidden="true" focusable="false">
+						<use xlink:href="{{openAccessIcon}}"></use>
+					</svg>
+					Open access
+				</small>
 			{{/if}}
 			{{#if description}}
 				<div class="c-product__description">
@@ -22,7 +27,7 @@
 			<ul class="c-product__actions">
 				{{#each actions}}
 					<li class="c-product__actions-item">
-						<a href="{{href}}"{{#if modifiers}} class="u-button{{#each modifiers}} u-button--{{.}}{{/each}}"{{/if}}>{{label}}</a>
+						<a href="{{href}}"{{#if modifiers}} class="u-button{{#each modifiers}} u-button--{{.}}{{/each}}"{{/if}}>{{label}} <span class="c-product__sr-text">({{../title}})</span></a>
 					</li>
 				{{/each}}
 			</ul>
