--- a/context/brand-context/springernature/scss/10-settings/typography.scss
+++ b/context/brand-context/springernature/scss/10-settings/typography.scss
@@ -25,11 +25,11 @@ $context--font-size-h5: $context--font-size-md;
 // http://stackoverflow.com/questions/20099844/chrome-not-respecting-rem-font-size-on-body-tag
 $context--font-size-base: 1em;
 
-$context--line-height-h1: 2.625rem;
-$context--line-height-h2: 2rem;
-$context--line-height-h3: 1.75rem;
-$context--line-height-h4: 1.5rem;
-$context--line-height-h5: 1.375rem;
+$context--line-height-h1: 1.2;
+$context--line-height-h2: 1.5;
+$context--line-height-h3: 1.4;
+$context--line-height-h4: 1.333;
+$context--line-height-h5: 1.375;
 
 // Fluid typography
 $context--font-size-h1-min: $context--font-size-h2;
