sn modal line-height

--- a/toolkits/springernature/packages/springernature-modal/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-modal/scss/50-components/enhanced.scss
@@ -17,7 +17,7 @@
 	&__title {
 		font-size: 1.125rem;
 		font-weight: 600;
-		line-height: 1.48;
+		line-height: $context--line-height-base;
 		margin-bottom: 20px;
 	}
 }
