removal of default flags

--- a/context/brand-context/default/scss/00-tokens/_background.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_background.variables.scss
@@ -1,7 +1,7 @@
 
 // Do not edit directly
-// Generated on Fri, 25 Nov 2022 08:51:01 GMT
+// Generated on Fri, 06 Jan 2023 11:12:46 GMT
 
-$t-background-page: #f8f8f8 !default;
-$t-background-container: #ffffff !default;
-$t-background-container-inverted: #222222 !default;
+$t-background-page: #f8f8f8;
+$t-background-container: #ffffff;
+$t-background-container-inverted: #222222;
