--- a/context/brand-context/default/scss/00-tokens/_border.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_border.variables.scss
@@ -1,14 +1,14 @@
 
 // Do not edit directly
-// Generated on Fri, 25 Nov 2022 08:51:01 GMT
+// Generated on Fri, 06 Jan 2023 11:12:46 GMT
 
-$t-border-color-primary: #222222 !default;
-$t-border-color-input: #999999 !default;
-$t-border-color-button: #01324b !default;
-$t-border-color-indent: #dadada !default;
-$t-border-radius-50: 2px !default;
-$t-border-radius-100: 4px !default;
-$t-border-width-25: 1px !default;
-$t-border-width-50: 2px !default;
-$t-border-width-100: 4px !default;
-$t-border-width-200: 8px !default;
+$t-border-color-primary: #222222;
+$t-border-color-input: #999999;
+$t-border-color-button: #01324b;
+$t-border-color-indent: #dadada;
+$t-border-radius-50: 2px;
+$t-border-radius-100: 4px;
+$t-border-width-25: 1px;
+$t-border-width-50: 2px;
+$t-border-width-100: 4px;
+$t-border-width-200: 8px;
