--- a/context/brand-context/default/scss/00-tokens/_icon.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_icon.variables.scss
@@ -1,7 +1,7 @@
 
 // Do not edit directly
-// Generated on Fri, 25 Nov 2022 08:51:01 GMT
+// Generated on Fri, 06 Jan 2023 11:12:46 GMT
 
-$t-icon-checkbox-checked-stroke: #ffffff !default;
-$t-icon-checkbox-checked-fill: #01324b !default;
-$t-icon-select-stroke: #000000 !default;
+$t-icon-checkbox-checked-stroke: #ffffff;
+$t-icon-checkbox-checked-fill: #01324b;
+$t-icon-select-stroke: #000000;
