--- a/context/brand-context/default/scss/00-tokens/_link.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_link.variables.scss
@@ -1,8 +1,8 @@
 
 // Do not edit directly
-// Generated on Fri, 25 Nov 2022 08:51:01 GMT
+// Generated on Fri, 06 Jan 2023 11:12:46 GMT
 
-$t-link-color: #025e8d !default;
-$t-link-hover: #01324b !default;
-$t-link-visited: #01324b !default;
-$t-link-focus: #0088cc !default;
+$t-link-color: #025e8d;
+$t-link-hover: #01324b;
+$t-link-visited: #01324b;
+$t-link-focus: #0088cc;
