--- a/context/brand-context/default/scss/00-tokens/_state.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_state.variables.scss
@@ -1,9 +1,9 @@
 
 // Do not edit directly
-// Generated on Fri, 25 Nov 2022 08:51:01 GMT
+// Generated on Fri, 06 Jan 2023 11:12:46 GMT
 
-$t-state-focus: #ffcc00 !default;
-$t-state-error: #c40606 !default;
-$t-state-warning: #f58220 !default;
-$t-state-success: #00a69d !default;
-$t-state-information: #000000 !default;
+$t-state-focus: #ffcc00;
+$t-state-error: #c40606;
+$t-state-warning: #f58220;
+$t-state-success: #00a69d;
+$t-state-information: #000000;
