--- a/context/brand-context/nature/scss/00-tokens/_typography.variables.scss
+++ b/context/brand-context/nature/scss/00-tokens/_typography.variables.scss
@@ -1,15 +1,15 @@
 
 // Do not edit directly
-// Generated on Fri, 25 Nov 2022 08:51:01 GMT
+// Generated on Fri, 06 Jan 2023 11:12:46 GMT
 
-$t-typography-heading-font-family: serif !default;
-$t-typography-heading-letter-spacing: 0.2rem !default;
-$t-typography-heading-line-height: 1.2 !default;
-$t-typography-heading-font-weight: 700 !default;
-$t-typography-heading-level-1-default-font-size: 2rem !default;
-$t-typography-heading-level-1-fluid-font-size: clamp(1.5rem, 4vw, 2rem) !default;
-$t-typography-heading-level-2-default-font-size: 1.5rem !default;
-$t-typography-heading-level-2-fluid-font-size: clamp(1.25rem, 4vw, 1.5rem) !default;
-$t-typography-heading-level-3-default-font-size: 1.25rem !default;
-$t-typography-heading-level-4-default-font-size: 1.25rem !default;
-$t-typography-heading-level-5-default-font-size: 1.125rem !default;
+$t-typography-heading-font-family: serif;
+$t-typography-heading-letter-spacing: 0.2rem;
+$t-typography-heading-line-height: 1.2;
+$t-typography-heading-font-weight: 700;
+$t-typography-heading-level-1-default-font-size: 2rem;
+$t-typography-heading-level-1-fluid-font-size: clamp(1.5rem, 4vw, 2rem);
+$t-typography-heading-level-2-default-font-size: 1.5rem;
+$t-typography-heading-level-2-fluid-font-size: clamp(1.25rem, 4vw, 1.5rem);
+$t-typography-heading-level-3-default-font-size: 1.25rem;
+$t-typography-heading-level-4-default-font-size: 1.25rem;
+$t-typography-heading-level-5-default-font-size: 1.125rem;
