--- a/context/brand-context/default/scss/00-tokens/_button.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_button.variables.scss
@@ -1,8 +1,8 @@
 
 // Do not edit directly
-// Generated on Fri, 25 Nov 2022 08:51:01 GMT
+// Generated on Fri, 06 Jan 2023 11:12:46 GMT
 
-$t-button-background-primary-resting: #01324b !default;
-$t-button-background-primary-hover: #ffffff !default;
-$t-button-background-secondary-resting: #ffffff !default;
-$t-button-background-secondary-hover: #01324b !default;
+$t-button-background-primary-resting: #01324b;
+$t-button-background-primary-hover: #ffffff;
+$t-button-background-secondary-resting: #ffffff;
+$t-button-background-secondary-hover: #01324b;
