--- a/context/brand-context/default/scss/00-tokens/_text.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_text.variables.scss
@@ -1,7 +1,7 @@
 
 // Do not edit directly
-// Generated on Fri, 25 Nov 2022 08:51:01 GMT
+// Generated on Fri, 06 Jan 2023 11:12:46 GMT
 
-$t-text-primary: #000000 !default;
-$t-text-secondary: #666666 !default;
-$t-text-reversed: #ffffff !default;
+$t-text-primary: #000000;
+$t-text-secondary: #666666;
+$t-text-reversed: #ffffff;
