--- a/context/brand-context/nature/scss/00-tokens/_background.variables.scss
+++ b/context/brand-context/nature/scss/00-tokens/_background.variables.scss
@@ -1,5 +1,5 @@
 
 // Do not edit directly
-// Generated on Fri, 25 Nov 2022 08:51:01 GMT
+// Generated on Fri, 06 Jan 2023 11:12:46 GMT
 
-$t-background-page: #ffffff !default;
+$t-background-page: #ffffff;
