--- a/context/brand-context/nature/scss/30-mixins/typography.scss
+++ b/context/brand-context/nature/scss/30-mixins/typography.scss
@@ -19,8 +19,7 @@
 	font-size: unquote('min(max(#{$context--font-size-h1-min}, 4vw), #{$context--font-size-h1})');
 	letter-spacing: $context--letter-spacing;
 	letter-spacing: unquote('min(max(#{$context--letter-spacing-min}, 4vw), #{$context--letter-spacing})');
-	line-height: $context--line-height-h1;
-	line-height: unquote('min(max(#{$context--line-height-h1-min}, 4vw), #{$context--line-height-h1})');
+	line-height: $t-typography-heading-line-height;
 	margin-bottom: spacing(24);
 }
 
@@ -30,8 +29,7 @@
 	font-size: $context--font-size-h2;
 	font-size: unquote('min(max(#{$context--font-size-h2-min}, 3.5vw), #{$context--font-size-h2})');
 	letter-spacing: $context--letter-spacing-min;
-	line-height: $context--line-height-h2;
-	line-height: unquote('min(max(#{$context--line-height-h2-min}, 3.5vw), #{$context--line-height-h2})');
+	line-height: $t-typography-heading-line-height;
 	margin-bottom: spacing(8);
 }
 
@@ -41,7 +39,7 @@
 	font-size: $context--font-size-h3;
 	font-size: unquote('min(max(#{$context--font-size-h3-min}, 3.0vw), #{$context--font-size-h3})');
 	letter-spacing: $context--letter-spacing-min;
-	line-height: $context--line-height-h3;
+	line-height: $t-typography-heading-line-height;
 	margin-bottom: spacing(8);
 }
 
@@ -51,6 +49,6 @@
 	font-size: $context--font-size-h4;
 	font-size: unquote('min(max(#{$context--font-size-h4-min}, 2.5vw), #{$context--font-size-h4})');
 	letter-spacing: $context--letter-spacing-min;
-	line-height: $context--line-height-h4;
+	line-height: $t-typography-heading-line-height;
 	margin-bottom: spacing(8);
 }
