--- a/toolkits/global/packages/global-product/scss/00-tokens/_default.tokens.scss
+++ b/toolkits/global/packages/global-product/scss/00-tokens/_default.tokens.scss
@@ -1,7 +1,7 @@
-// Generated on 25/11/2022, 09:48:57
+// Generated on 06/01/2023, 11:12:47
 // Source: design-tokens/components/global/global-product/default.json
 // DO NOT edit directly
 
-$global-product-actions-spacing: $tokens--spacing-relative-800 !default;
-$global-product-description-spacing: $tokens--spacing-relative-400 !default;
-$global-product-spacing: $tokens--spacing-relative-1200 !default;
+$global-product-actions-spacing: $t-spacing-relative-800;
+$global-product-description-spacing: $t-spacing-relative-400;
+$global-product-spacing: $t-spacing-relative-1200;
