Updates global details component as block spacing was removed

--- a/toolkits/global/packages/global-details/scss/10-settings/springer.scss
+++ b/toolkits/global/packages/global-details/scss/10-settings/springer.scss
@@ -5,7 +5,7 @@ $details--border-color: greyscale(80);
 $details--border-width: 0;
 $details--padding: 0;
 $details--content-padding: spacing(16) 0 0 1.333em;
-$details--spacing: $tokens--typography-block-spacing-medium;
+$details--spacing: 1.5em;
 $details--icon-size: 1em;
 $details--focus-underline-color: color('action-focus');
 /* TODO: Move color to brand context */
